# satkit

./: .gitignore  .pylintrc  MANIFEST.markdown  NOTES.markdown  OF_LICENSE  README.markdown  README.md  citations.bib  concat_cli.py  detect_probe_misalignment.py  doc_generation_commands  driver.py  git_pull.bat  git_push.bat  gpl-v3_and_CC-BY-NC-SA.tmpl  gui.py  l1_mpbpd_annotator.py  licenseheaders_command  manifest.markdown  manifest.txt  of_cli.py  pd_3D_annotator.py  pd_3D_qt_annotator.py  pd_3D_uti_cli.py  pd_annd_annotator.py  pd_annd_cli.py  pd_annotator.py  pd_cli.py  pd_for_old_3D_qt_annotator.py  pd_logging_configuration.json  pd_qt_annotator.py  pd_test.py  pd_uti_and_video_annotator.py  pd_uti_and_video_cli.py  pyproject.toml  rudimentary_tests.sh  sap_logging_configuration.json  satkit.py  satkit_conda_env.yml  satkit_data_import_config.yaml  (+12 more)
config_examples/: satkit_data_run_parameters.yaml  satkit_gui_parameters.yaml
configuration/: configuration.yaml  satkit_data_run_parameters.yaml  satkit_default_parameters.yaml  satkit_gui_parameters.yaml  satkit_logging_configuration.json  satkit_plot_parameters.yaml  satkit_publish_parameters.yaml
data/: P1_01.txt  P1_01US.txt
devel/: conda_environment_update_commands  doc_generation_commands  gpl-v3_and_CC-BY-NC-SA.tmpl  licenseheaders_command
docs/: Changelog.markdown  CoreDataStructures.markdown  DatabaseClasses.markdown  DirectoryStructure.markdown  ModalitiesforDerivedData.markdown  ModalitiesforRecordedData.markdown  ModalitiesinPractice.markdown  Release_notes.markdown  Roadmap.markdown  SATKIT_coding_conventions.markdown  SATKIT_development_guide.markdown  Saving_and_loading.markdown  SetupForDevelopment.markdown  Splines.markdown  WritingNewModality.markdown  core_data_structures.drawio  forking_satkit.drawio  index.md
documentation/: CoreDataStructures.markdown  DirectoryStructure.markdown  ModalitiesforRecordedData.markdown  SATKIT_Documentation.markdown  SATKIT_coding_conventions.markdown  WritingNewModality.markdown  index.md
environments/: satkit_devel_conda_env.yaml  satkit_stable_conda_env.yaml
gui_test_token/: P1_day2a_File156.csv
of/: __init__.py  ofbrowse.py  ofreg.py
pd/: __init__.py  audio.py  commandLineInterface.py  io.py  pd.py  pdplot.py
pd/io/: AAA.py  (+2 more)
sap/: __init__.py  commandLineInterface.py  ofreg.py  pdplot.py
satkit/: __init__.py  annd.py  annotator.py  argument_parser.py  commandLineInterface.py  configuration.py  constants.py  data_loader.py  data_processor.py  data_structures.py  errors.py  gui.py  interpolate_raw_uti.py  io.py  logging_helpers.py  modalities.py  ofbrowse.py  ofreg.py  pd.py  pd_annd_plot.py  pdplot.py  processing_helpers.py  qt_3d_annotator.py  qt_annotator.py  qt_annotator.ui  recording.py  recordingTypes.py  satgrid.py  satkit.py  ui_callbacks.py
scripts/: dat_to_wav.py  l1_mpbpd_annotator.py  of_cli.py  pd_3D_annotator.py  pd_3D_qt_annotator.py  pd_3D_uti_cli.py  pd_annd_annotator.py  pd_annd_cli.py  pd_annotator.py  pd_cli.py  pd_for_old_3D_qt_annotator.py  pd_uti_and_video_annotator.py  pd_uti_and_video_cli.py
spline_test_token1/: csv_spline_import_config.yaml  session_config.yaml  spline_config.yaml  spline_import_config.yaml
spline_test_token2/: .~lock.P1_day2a_File156.csv#  File156.ult  csv_spline_import_config.yaml  session_import_config.yaml  spline_config.yaml
spline_test_token3/: File156.PD_l1_on_RawUltrasound.satkit_meta  File156.PD_l1_top_on_RawUltrasound.npz  File156.PD_l1_whole_on_RawUltrasound.npz  File156.PD_l1_whole_on_RawUltrasound.satkit_meta  File156.Recording.satkit_meta  File156.SplineMetric_annd_ts3_on_Splines.npz  File156.SplineMetric_annd_ts3_on_Splines.satkit_meta  File156.SplineMetric_fourier_on_Splines.npz  File156.SplineMetric_modified_curvature_on_Splines.npz  File156.SplineMetric_mpbpd_ts3_on_Splines.npz  File156.SplineMetric_mpbpd_ts3_on_Splines.satkit_meta  File156.TextGrid  File156US.txt  csv_spline_import_config.yaml  spline_config.yaml  spline_test_token2.RecordingSession.satkit_meta  spline_test_token3.RecordingSession.satkit_meta
test1_1/: File003.TextGrid  File007.TextGrid  File008.txt  File009.txt  File009US.txt  File010.TextGrid  File010.txt
test1_2/: File002.txt  File002US.txt  File006.txt  File006US.txt  File009.txt  File009US.txt
test2/: uti_directories.csv
tongue_data_1_1/: File009.TextGrid
tongue_data_1_2/: File003.txt  File004.TextGrid  exclusion_list.csv  exclusion_list.yaml
tongue_data_2/: exclusion_list.csv
(+402 files in other folders)
