[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42"]

[project]
authors = [
  {email = "giuthas@gmail.com"},
  {name = "Pertti Palo, Scott Moisik, Matthew Faytak, Motoki Saito"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Intended Audience :: Speech researchers",
]
description = "Speech Articulation ToolKit: tools for processing ultrasound speech data"
keywords = ["speech", "articulation", "textgrid", "ultrasound", "splines"]
license = {file = "LICENSE.markdown"}
maintainers = [
  {name = "Pertti Palo", email = "giuthas@gmail.com"},
]
name = "satkit"
readme = "README.md"
requires-python = ">=3.9"
version = "0.10"

dependencies = [
  # To be added
]

[project.urls]
bug_tracker = "https://github.com/giuthas/satkit/issues"
changelog = "https://github.com/giuthas/satkit/blob/main/docs/Release_notes.markdown"
documentation = "https://github.com/giuthas/satkit/blob/main/docs/index.md"
homepage = "github.com/giuthas/satkit"
repository = "github.com"

[project.scripts]
satkit-cli = "satkit:main_cli"

[project.gui-scripts]
satkit-gui = "satkit:main_gui"
