[metadata]
name = satkit  
version = 0.3.1
description = Speech Articulation ToolKit: tools for processing ultrasound speech data
long_description = file: README.markdown, MANIFEST.markdown
long_description_content_type = text/markdown
license_file = LICENSE.markdown
author = Pertti Palo, Scott Moisik, Matthew Faytak, Motoki Saito
maintainer = Pertti Palo
maintainer_email = giuthas@gmail.com
url = https://github.com/giuthas/satkit
project_urls =
    Bug Tracker = https://github.com/giuthas/satkit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL 3 (code) and CC-BY-NC-SA 4.0 (sample data)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Speech researchers

[options]
package_dir =
    = satkit
packages = find:
python_requires = >=3.7
install_requires = [
    numpy >= 1.17,
    matplotlib >= 3.3,
    scipy >= 1.3
]

[options.packages.find]
where = satkit